<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/b_sky">
    
   

    <TextView
        android:id="@+id/user_level"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#00FF00"
        android:textSize="36sp" />

        />
     <Button 
        android:id="@+id/balloon_level1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/balloon_level1"
        android:textSize="40sp"
        android:textColor="#ff0000"

        />
      <Button 
        android:id="@+id/balloon_level2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/balloon_level2"
        android:textSize="40sp"
        android:textColor="#ff0000"

        />
       <Button 
        android:id="@+id/balloon_level3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/balloon_level3"
        android:textSize="40sp"
        android:textColor="#ff0000"

        />
        <Button 
        android:id="@+id/balloon_level4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/balloon_level4"
        android:textSize="40sp"
        android:textColor="#ff0000"

        />
        <Button 
        android:id="@+id/balloon_level5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/balloon_level5"
        android:textSize="40sp"
        android:textColor="#ff0000"

        />
        <Button 
        android:id="@+id/balloon_level6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/balloon_level6"
        android:textSize="40sp"
        android:textColor="#ff0000"

        />

</LinearLayout>
